--- a/index.html
+++ b/index.html
@@ -35,8 +35,14 @@
   <body>
     <div class="container">
       <h1>Behaviour Twin</h1>
+      <h2>MBD-KIT</h2>
       <video controls>
-        <source src="videos/SampleVideo_1280x720_1mb.mp4" type="video/mp4" />
+        <source src="videos/mdp_hausmesse_v0.3.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+      </video>
+      <h2>Federated Learning Demonstrator</h2>
+      <video controls>
+        <source src="videos/dlr_fl_hausmesse_subtitled.mp4" type="video/mp4" />
           Your browser does not support the video tag.
       </video>
     </div>
