--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
     <div class="container">
       <h1>Behaviour Twin</h1>
-      <h2>MBD-KIT</h2>
+      <h2>Model-Based Development</h2>
       <video controls>
         <source src="videos/mdp_hausmesse_v0.3.mp4" type="video/mp4" />
           Your browser does not support the video tag.
